@@ -47,11 +47,47 @@
                     <enableAssertions>true</enableAssertions>
                 </configuration>
             </plugin>
+
+
+            <!-- Big complex hack just to get @Resource(lookup="foo") -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.jboss.spec.javax.annotation</groupId>
+                                    <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
     <dependencies>
-
+        <!-- Needed for @Resource(lookup=) -->
+        <dependency>
+           <groupId>org.jboss.spec.javax.annotation</groupId>
+           <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+        </dependency>
+        
         <dependency>
             <groupId>org.jboss.spec.javax.faces</groupId>
             <artifactId>jboss-jsf-api_2.0_spec</artifactId>
